--- a/biblio.bib
+++ b/biblio.bib
@@ -179,3 +179,26 @@
   year={2020},
   publisher={Manning Publications}
 }
+
+@inproceedings{DBLP:conf/icml/OmidshafieiPAHV17,
+  author    = {Shayegan Omidshafiei and
+               Jason Pazis and
+               Christopher Amato and
+               Jonathan P. How and
+               John Vian},
+  _editor    = {Doina Precup and
+               Yee Whye Teh},
+  title     = {Deep Decentralized Multi-task Multi-Agent Reinforcement Learning under
+               Partial Observability},
+  _booktitle = {Proceedings of the 34th International Conference on Machine Learning,
+               {ICML} 2017, Sydney, NSW, Australia, 6-11 August 2017},
+  series    = {Proceedings of Machine Learning Research},
+  volume    = {70},
+  pages     = {2681--2690},
+  publisher = {{PMLR}},
+  year      = {2017},
+  url       = {http://proceedings.mlr.press/v70/omidshafiei17a.html},
+  timestamp = {Wed, 29 May 2019 08:41:45 +0200},
+  biburl    = {https://dblp.org/rec/conf/icml/OmidshafieiPAHV17.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
