add reference, grammar tweaks

--- a/biblio.bib
+++ b/biblio.bib
@@ -202,3 +202,50 @@
   biburl    = {https://dblp.org/rec/conf/icml/OmidshafieiPAHV17.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inproceedings{DBLP:conf/icml/YangLLZZW18,
+  author    = {Yaodong Yang and
+               Rui Luo and
+               Minne Li and
+               Ming Zhou and
+               Weinan Zhang and
+               Jun Wang},
+  _editor    = {Jennifer G. Dy and
+               Andreas Krause},
+  title     = {Mean Field Multi-Agent Reinforcement Learning},
+  _booktitle = {Proceedings of the 35th International Conference on Machine Learning,
+               {ICML} 2018, Stockholmsm{\"{a}}ssan, Stockholm, Sweden, July
+               10-15, 2018},
+  series    = {Proceedings of Machine Learning Research},
+  volume    = {80},
+  pages     = {5567--5576},
+  publisher = {{PMLR}},
+  year      = {2018},
+  url       = {http://proceedings.mlr.press/v80/yang18d.html},
+  timestamp = {Fri, 19 Nov 2021 10:16:46 +0100},
+  biburl    = {https://dblp.org/rec/conf/icml/YangLLZZW18.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/aaai/FoersterFANW18,
+  author    = {Jakob N. Foerster and
+               Gregory Farquhar and
+               Triantafyllos Afouras and
+               Nantas Nardelli and
+               Shimon Whiteson},
+  _editor    = {Sheila A. McIlraith and
+               Kilian Q. Weinberger},
+  title     = {Counterfactual Multi-Agent Policy Gradients},
+  _booktitle = {Proceedings of the Thirty-Second {AAAI} Conference on Artificial Intelligence,
+               (AAAI-18), the 30th innovative Applications of Artificial Intelligence
+               (IAAI-18), and the 8th {AAAI} Symposium on Educational Advances in
+               Artificial Intelligence (EAAI-18), New Orleans, Louisiana, USA, February
+               2-7, 2018},
+  pages     = {2974--2982},
+  publisher = {{AAAI} Press},
+  year      = {2018},
+  url       = {https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/17193},
+  timestamp = {Thu, 18 Feb 2021 14:22:23 +0100},
+  biburl    = {https://dblp.org/rec/conf/aaai/FoersterFANW18.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
