minors on implies math symbol

--- a/collective-learning.tex
+++ b/collective-learning.tex
@@ -21,7 +21,7 @@
 \newcommand{\version}{1}
 \usepackage[
 	backend=biber,
-	style=alphabetic]{biblatex}
+	style=numeric]{biblatex}
 \addbibresource{biblio.bib}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title[On Collective Reinforcement Learning]
@@ -594,7 +594,7 @@
 			\item The approaches handle only partially the collective learning problem (scalability, cooperative, non-stationarity)
 			\item They are used nowadays but in combination with other approaches (neural networks, reply buffer, differential reward) \dots
 			\item \dots But today no theoretical solutions exists yet for large scale collective learning
-			\item Note: we do not cover the "game theoretical" background $\leftarrow$ it is current the main interest in literature (\emph{problem} $$\implies$$ these works consider few agents)
+			\item Note: we do not cover the "game theoretical" background $\leftarrow$ it is current the main interest in literature (\emph{problem} $\implies$ these works consider few agents)
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
