--- a/collective-learning.tex
+++ b/collective-learning.tex
@@ -519,7 +519,7 @@
 			\item[{\color{teal} \faThumbsUp}] It improves standard Q-Learning performance without adding more complexity
 			\item[{\color{teal} \faThumbsUp}] It is currently used in Deep Reinforcement Learning to handle complex systems~\cite{DBLP:conf/icml/OmidshafieiPAHV17}
 			\item[{\color{red} \faThumbsDown}] It is a heuristic, so it does not have any theoretical guarantees
-			\item Other extensions follow this idea and suffer from the same pros and cons. The most famous are Distributed Q-Learning, Lenient Q-Learning, Win-Or-Learn-fast
+			\item Other extensions follow this idea and suffer from the same pros and cons. The most famous are Distributed Q-Learning~\cite{DBLP:conf/icml/LauerR00}, Lenient Q-Learning~\cite{DBLP:conf/atal/PanaitSL06}, Win-Or-Learn Fast~\cite{DBLP:journals/ai/BowlingV02}
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
