--- a/biblio.bib
+++ b/biblio.bib
@@ -249,3 +249,57 @@
   biburl    = {https://dblp.org/rec/conf/aaai/FoersterFANW18.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inproceedings{DBLP:conf/icml/LauerR00,
+  author    = {Martin Lauer and
+               Martin A. Riedmiller},
+  _editor    = {Pat Langley},
+  title     = {An Algorithm for Distributed Reinforcement Learning in Cooperative
+               Multi-Agent Systems},
+  _booktitle = {Proceedings of the Seventeenth International Conference on Machine
+               Learning {(ICML} 2000), Stanford University, Stanford, CA, USA, June
+               29 - July 2, 2000},
+  pages     = {535--542},
+  publisher = {Morgan Kaufmann},
+  year      = {2000},
+  timestamp = {Sun, 21 Feb 2010 20:54:50 +0100},
+  biburl    = {https://dblp.org/rec/conf/icml/LauerR00.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/atal/PanaitSL06,
+  author    = {Liviu Panait and
+               Keith Sullivan and
+               Sean Luke},
+  editor    = {Hideyuki Nakashima and
+               Michael P. Wellman and
+               Gerhard Weiss and
+               Peter Stone},
+  title     = {Lenient learners in cooperative multiagent systems},
+  booktitle = {5th International Joint Conference on Autonomous Agents and Multiagent
+               Systems {(AAMAS} 2006), Hakodate, Japan, May 8-12, 2006},
+  pages     = {801--803},
+  publisher = {{ACM}},
+  year      = {2006},
+  url       = {https://doi.org/10.1145/1160633.1160776},
+  doi       = {10.1145/1160633.1160776},
+  timestamp = {Tue, 06 Nov 2018 16:59:09 +0100},
+  biburl    = {https://dblp.org/rec/conf/atal/PanaitSL06.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/ai/BowlingV02,
+  author    = {Michael H. Bowling and
+               Manuela M. Veloso},
+  title     = {Multiagent learning using a variable learning rate},
+  journal   = {Artif. Intell.},
+  volume    = {136},
+  number    = {2},
+  pages     = {215--250},
+  year      = {2002},
+  url       = {https://doi.org/10.1016/S0004-3702(02)00121-2},
+  doi       = {10.1016/S0004-3702(02)00121-2},
+  timestamp = {Sat, 27 May 2017 14:24:42 +0200},
+  biburl    = {https://dblp.org/rec/journals/ai/BowlingV02.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
