--- a/biblio.bib
+++ b/biblio.bib
@@ -303,3 +303,10 @@
   biburl    = {https://dblp.org/rec/journals/ai/BowlingV02.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{wolpert1999introduction,
+  title={An introduction to collective intelligence},
+  author={Wolpert, David H and Tumer, Kagan},
+  journal={arXiv preprint cs/9908014},
+  year={1999}
+}
