--- a/biblio.bib
+++ b/biblio.bib
@@ -310,3 +310,24 @@
   journal={arXiv preprint cs/9908014},
   year={1999}
 }
+
+@inproceedings{DBLP:conf/icra/LongFLLZP18,
+  author    = {Pinxin Long and
+               Tingxiang Fan and
+               Xinyi Liao and
+               Wenxi Liu and
+               Hao Zhang and
+               Jia Pan},
+  title     = {Towards Optimally Decentralized Multi-Robot Collision Avoidance via
+               Deep Reinforcement Learning},
+  _booktitle = {2018 {IEEE} International Conference on Robotics and Automation, {ICRA}
+               2018, Brisbane, Australia, May 21-25, 2018},
+  pages     = {6252--6259},
+  publisher = {{IEEE}},
+  year      = {2018},
+  url       = {https://doi.org/10.1109/ICRA.2018.8461113},
+  _doi       = {10.1109/ICRA.2018.8461113},
+  timestamp = {Wed, 16 Oct 2019 14:14:51 +0200},
+  biburl    = {https://dblp.org/rec/conf/icra/LongFLLZP18.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
